<resources>
    <string name="app_name">lab2</string>
    <string name="logo_text">Калькулятор</string>
    <string name="input_hint_1">Введите число 1</string>
    <string name="input_hint_2">Введите число 2</string>
    <string name="button_text">"Добавить числа"</string>
    <string name="result_text">Результат:</string>
    <string name="reset_text">Сбросить</string>
    
    <string-array name="math_actions">
        <item>Сложение</item>
        <item>Вычитание</item>
        <item>Умножение</item>
        <item>Деление</item>
    </string-array>

    <string name="spinner_text">Выберите действие</string>
</resources>